# nomad-semantic-web-service

./: .cruft.json  .pre-commit-config.yaml  404.html  CITATION.cff  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.cspell/: custom-dictionary.txt
.github/workflows/: mkdocs-deploy.yml  publish.yml  spellcheck.yaml
docs/: index.md
docs/explanation/: explanation.md
docs/how_to/: install_this_plugin.md  use_this_plugin.md
docs/reference/: references.md
docs/tutorial/: tutorial.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
scripts/: generate_custom_dict.sh
search/: search_index.json
src/nomad_semantic_web_service/apis/: __init__.py  api.py
src/nomad_semantic_web_service/catalogue/: demo_data.py  icat.py  ontology.py  search.py
src/nomad_semantic_web_service/schema_packages/: __init__.py  schema.py  schema_package.py
tests/apis/: test_api.py
tests/catalogue/: test_icat.py  test_search.py
tests/data/: test.archive.yaml  test_default_dates.archive.yaml  test_panet.archive.yaml
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
