[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    
]
name = "nomad-semantic-web-service"
description = "A tool to query public synchrotron dataset catalogues with semantic OpenAPI annotations."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lukas Pielsticker", email = "lukas.pielsticker@physik.hu-berlin.de" },
]
maintainers = [
    { name = "Lukas Pielsticker", email = "lukas.pielsticker@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab>=1.4.1",
    "fastapi",
    "httpx",
    "owlready2",
    "rdflib",
    # nomad-lab's own "infrastructure" extra pins rdflib==5 workspace-wide; that
    # version's SPARQL parser is broken with pyparsing>=3 (any query fails with
    # AttributeError: 'NoneType' object has no attribute 'name'). Pin pyparsing
    # back to restore SPARQL support, since nothing else in this workspace
    # constrains it to >=3.
    "pyparsing<3",
]

[project.urls]
Repository = "https://github.com/FAIRmat-NFDI/nomad-semantic-web-service"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "structlog",
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocs-click",
    "pytest-asyncio",
]

[project.entry-points.'nomad.plugin']
schema_package_entry_point = "nomad_semantic_web_service.schema_packages:schema_package_entry_point"
api_entry_point = "nomad_semantic_web_service.apis:api_entry_point"


[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
    
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # Pyflakes
    "PL", # pylint
    "UP", # pyupgrade
    "I", # isort    
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
    "PLC0415", # `import` should be at the top-level of a file
    "E501", # line too long,
    "PLR2004", # Magic value used instead of constant
]

fixable = ["ALL"]
isort.split-on-trailing-comma = false

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0415"] # import-outside-top-level

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use double quotes for strings.
quote-style = "double"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, import-untyped, annotation-unchecked"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nomad_semantic_web_service = ["ontologies/*.owl"]

[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]
